[project]
name = "schemas-lib"
version = "0.0.1"
dependencies = [
    "pydantic ==2.11.7",
    "email-validator ==2.2.0",
    "pydantic-settings ==2.10.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "schemas_lib", 
    "schemas_lib.auth_service",
    "schemas_lib.paste_service",
]