[project]
name = "eventhub"
version = "0.0.1"
dependencies = [
    "aiokafka==0.12.0",
    "avro-python3==1.10.2",
    "httpx==0.28.1",
    "pydantic==2.11.7",
    "email-validator ==2.2.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "eventhub"
]